# RealFakeSDRDisplayInHDR

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: CI.yml  Package.yml
cmake/: embed_file.cmake
resources/: open_source_licenses.txt
scripts/: configure.ps1  format.ps1
src/: embeds.cpp  embeds.h  header_impl.cpp  main.cpp  precompiled_header.h  resource.h  resource.rc
src/shaders/: cpp_shared.hlsli  tonemap.hlsl
